--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "markdown-it-mathjax3": "^4.3.2",
     "prettier": "^2.7.1",
     "vitepress": "^1.0.0-alpha.21"
   }
